(MSVC 2010) MSVC 2010 Wswan build fix

--- a/msvc/wswan/msvc-2010/msvc-2010.vcxproj
+++ b/msvc/wswan/msvc-2010/msvc-2010.vcxproj
@@ -12,6 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libretro.cpp" />
+    <ClCompile Include="..\..\..\mednafen\cputest\cputest.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
     <ClCompile Include="..\..\..\mednafen\endian.cpp" />
     <ClCompile Include="..\..\..\mednafen\error.cpp" />
     <ClCompile Include="..\..\..\mednafen\file.cpp" />
@@ -24,6 +28,7 @@
     <ClCompile Include="..\..\..\mednafen\MemoryStream.cpp" />
     <ClCompile Include="..\..\..\mednafen\mempatcher.cpp" />
     <ClCompile Include="..\..\..\mednafen\okiadpcm.cpp" />
+    <ClCompile Include="..\..\..\mednafen\player.cpp" />
     <ClCompile Include="..\..\..\mednafen\settings.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Blip_Buffer.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Stereo_Buffer.cpp" />
@@ -39,15 +44,15 @@
     </ClCompile>
     <ClCompile Include="..\..\..\mednafen\video\Deinterlacer.cpp" />
     <ClCompile Include="..\..\..\mednafen\video\surface.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\eeprom.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\gfx.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\interrupt.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\main.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\rtc.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\sound.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\tcache.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\v30mz.cpp" />
-    <ClCompile Include="..\..\..\mednafen\wswan\wswan-memory.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\eeprom.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\gfx.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\interrupt.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\main.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\rtc.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\sound.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\tcache.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\v30mz.cpp" />
+    <ClCompile Include="..\..\..\mednafen\wswan-09333\wswan-memory.cpp" />
     <ClCompile Include="..\..\..\scrc32.cpp" />
     <ClCompile Include="..\..\..\stubs.cpp" />
   </ItemGroup>
@@ -93,7 +98,7 @@
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <PrecompiledHeaderOutputFile>$(OutDir)$(ProjectName).pch</PrecompiledHeaderOutputFile>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PreprocessorDefinitions>_DEBUG;_WIN32;_LIB;LSB_FIRST;WANT_WSWAN_EMU;WANT_32BPP;SIZEOF_DOUBLE=8;MEDNAFEN_VERSION=0.9.26;MPC_FIXED_POINT;__LIBRETRO__;_LOW_ACCURACY;WANT_STEREO_SOUND;FRONTEND_SUPPORTS_RGB565;PSS_STYLE=2;MEDNAFEN_VERSION_NUMERIC=926;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WIN32;_LIB;LSB_FIRST;WANT_WSWAN_EMU;WANT_32BPP;SIZEOF_DOUBLE=8;MEDNAFEN_VERSION=0.9.26;MPC_FIXED_POINT;__LIBRETRO__;_LOW_ACCURACY;WANT_STEREO_SOUND;FRONTEND_SUPPORTS_RGB565;PSS_STYLE=2;MEDNAFEN_VERSION_NUMERIC=926;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;WANT_NEW_API</PreprocessorDefinitions>
       <CallAttributedProfiling>Callcap</CallAttributedProfiling>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\..\;$(SolutionDir)\..\..\mednafen;$(SolutionDir)\..\..\mednafen\cdrom;$(SolutionDir)\..\..\mednafen\include;$(SolutionDir)\..\..\mednafen\sound;$(SolutionDir)\..\..\mednafen\ngp;$(SolutionDir)\..\..\mednafen\hw_cpu;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -115,7 +120,7 @@
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <PrecompiledHeaderOutputFile>$(OutDir)$(ProjectName).pch</PrecompiledHeaderOutputFile>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <PreprocessorDefinitions>NDEBUG;_WIN32;_LIB;LSB_FIRST;WANT_WSWAN_EMU;WANT_32BPP;SIZEOF_DOUBLE=8;MEDNAFEN_VERSION=0.9.26;MPC_FIXED_POINT;__LIBRETRO__;_LOW_ACCURACY;WANT_STEREO_SOUND;FRONTEND_SUPPORTS_RGB565;PSS_STYLE=2;MEDNAFEN_VERSION_NUMERIC=926;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WIN32;_LIB;LSB_FIRST;WANT_WSWAN_EMU;WANT_32BPP;SIZEOF_DOUBLE=8;MEDNAFEN_VERSION=0.9.26;MPC_FIXED_POINT;__LIBRETRO__;_LOW_ACCURACY;WANT_STEREO_SOUND;FRONTEND_SUPPORTS_RGB565;PSS_STYLE=2;MEDNAFEN_VERSION_NUMERIC=926;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;WANT_NEW_API</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)\..\..\;$(SolutionDir)\..\..\mednafen;$(SolutionDir)\..\..\mednafen\cdrom;$(SolutionDir)\..\..\mednafen\include;$(SolutionDir)\..\..\mednafen\sound;$(SolutionDir)\..\..\mednafen\ngp;$(SolutionDir)\..\..\mednafen\hw_cpu;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
